--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1158,7 +1158,7 @@ EVTOPTA8436;Send in the federal brigades!;;;;;;;;;;;;;x
 EVTNAME8437;The Arraial dos Canudos Resists Again!;;;;;;;;;;;;;x
 EVTDESC8437;Somehow, against all odds, the Canudos pushed back the first federal expedition into their territory.\n\n\ This is a massive blunder from the army, they went in way too over confident, and end up ambushed in between the mountainous terrain. And to make matters worse, colonel Moreira César, who was considered a war hero for his work against previous revolts, died in the ambush.;;;;;;;;;;;;;x
 EVTOPTA8437;Outrageous! Send in another bigger expendition to crush the monarchist scum!;;;;;;;;;;;;;x
-EVTOPTA8437;Impossible... This maybe a signal from above...;;;;;;;;;;;;;x
+EVTOPTB8437;Impossible... This may be a signal from above...;;;;;;;;;;;;;x
 EVTNAME8439;The Arraial dos Canudos have been crushed!;;;;;;;;;;;;;x
 EVTDESC8439;After a long fought batter, the Arraial dos Canudos was finally defeated, and Antônio Conselheiro is dead. Honestly, this was a massive mistake from the army, their second expedition was troubled with supply problems and once again they were over confident, but even so, they won by the end, Conselheiro wasn't even killed, it seems he died from disease way before, which probably weakened the rebel's will to fight.;;;;;;;;;;;;;x
 EVTOPTA8439;It's over anyway;;;;;;;;;;;;;x
