--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1156,7 +1156,7 @@ EVTNAME8436;The Arraial dos Canudos Resists!;;;;;;;;;;;;;x
 EVTDESC8436;Antônio Conselheiro and his followers continue to cause trouble in Bahia! They actually amassed a following of more than 20 thousand people! Not only that, but they managed to repel the provincial forces, repeling two to crush their little town, the state is powerless and asks for the federal troops to intervene. This is extremely troubleful as those rebels are open pro monarchy.;;;;;;;;;;;;;x
 EVTOPTA8436;Send in the federal brigades!;;;;;;;;;;;;;x
 EVTNAME8437;The Arraial dos Canudos Resists Again!;;;;;;;;;;;;;x
-EVTDESC8437;Somehow, against all odds, the Canudos pushed back the first federal expedition into their territory.\n\n\ This is a massive blunder from the army, they went in way too over confident, and end up ambushed in between the mountainous terrain. And to make matters worse, colonel Moreira César, who was considered a war hero for his work against previous revolts, died in the ambush.;;;;;;;;;;;;;x
+EVTDESC8437;Somehow, against all odds, the Canudos pushed back the first federal expedition. \n\nThis is a massive blunder from the army, they went in way too over confident, and end up ambushed in between the mountainous terrain. And to make matters worse, colonel Moreira César, who was considered a war hero for his work against previous revolts, died in the ambush.;;;;;;;;;;;;;x
 EVTOPTA8437;Outrageous! Send in another bigger expendition to crush the monarchist scum!;;;;;;;;;;;;;x
 EVTOPTB8437;Impossible... This may be a signal from above...;;;;;;;;;;;;;x
 EVTNAME8439;The Arraial dos Canudos have been crushed!;;;;;;;;;;;;;x
