--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -893,7 +893,7 @@ EVTOPTC8018;Let them stay, they are harmless.;;;;;;;;;;;;;
 EVTNAME8019;A proper flag for Brazil;;;;;;;;;;;;;
 EVTDESC8019;Surely, we need a proper flag if we want to be a proper republic, not this american knockoff. \n\n "A yellow rhombus on a green field, with the blue celestial sphere in the center, crossed by a white band diagonally descending from left to right, bearing the motto - Order and Progress - and punctuated by twenty-one stars, including those of the Southern Cross constellation, arranged according to their astronomical position, representing the twenty states of the Republic and the Neutral Municipality.";;;;;;;;;;;;;
 EVTOPTA8019;Perfect!;;;;;;;;;;;;;
-EVTOPTA8019;I actually like the current one...;;;;;;;;;;;;;
+EVTOPTB8019;Actually, I like the current one...;;;;;;;;;;;;;
 EVTNAME8100;Farrapos pushed back!;;;;;;;;;;;;;x
 EVTDESC8100;Our army managed to push back the farraupilha army and secure our land back! Another triumph standing as a testament to the unyielding commitment and sacrifice of our soldiers.;;;;;;;;;;;;;x
 EVTOPTA8100;This land is rightfully ours!;;;;;;;;;;;;;x
