--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -886,7 +886,7 @@ EVTNAME8017;  ;;;;;;;;;;;;;
 EVTDESC8017;  ;;;;;;;;;;;;;
 EVTOPTA8017;  ;;;;;;;;;;;;;
 EVTNAME8018;The Imperial Family;;;;;;;;;;;;;
-EVTDESC8018;After the recent revolution, we were pondering what to do with the royal family. While they ultimately forced out for a reason, the regime ended in a somewhat peaceful way, and the common folk is mostly unaware of what's going, but the royal family is somewhat well liked, and once the word spread around they may be able to instigate the people to be against the new regime. \n\nWe could straight up exile them, but we could also let them be.;;;;;;;;;;;;;
+EVTDESC8018;After the recent revolution, we were pondering what to do with the royal family. While they where ultimately forced out for a reason, the regime ended in a somewhat peaceful way, and the common folk is mostly unaware of what's going, the royal family is still somewhat well liked, and once the word spread around they may be able to instigate the people against the new regime. \n\nWe could straight up exile them, but we could also let them be.;;;;;;;;;;;;;
 EVTOPTA8018;Exile them!;;;;;;;;;;;;;
 EVTOPTB8018;Let them stay, but strip them away of their political rights.;;;;;;;;;;;;;
 EVTOPTC8018;Let them stay, they are harmless.;;;;;;;;;;;;;
