--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1597,3 +1597,5 @@ reorganizing_labor_minimal;Reorganizing Labor;;;;;;;;;;;;;x
 reorganizing_labor_minimal_desc;After slavery was abolished, the local slave dependent economy was deeply affected and is still recovering.;;;;;;;;;;;;;x
 lei_do_registro;Register Law;;;;;;;;;;;;;x
 lei_do_registro_desc;Slaves are being registered and freed, but we are repaying the former owners from our pocket.;;;;;;;;;;;;;x
+tarifa_alves_branco;Alves Branco Tariff;;;;;;;;;;;;;x
+tarifa_alves_branco_desc;A protective tariff to shield the national industry from outside competition. And also booster tax revenue, mostly this.;;;;;;;;;;;;;x
