Alves branco outrage

--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1599,3 +1599,5 @@ lei_do_registro;Register Law;;;;;;;;;;;;;x
 lei_do_registro_desc;Slaves are being registered and freed, but we are repaying the former owners from our pocket.;;;;;;;;;;;;;x
 tarifa_alves_branco;Alves Branco Tariff;;;;;;;;;;;;;x
 tarifa_alves_branco_desc;A protective tariff to shield the national industry from outside competition. And also booster tax revenue, mostly this.;;;;;;;;;;;;;x
+economic_downturn;Economic Downturn;;;;;;;;;;;;;x
+economic_downturn_desc;Factories are having an hard time coping with the removal of the protective tariffs.;;;;;;;;;;;;;x
