--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1173,3 +1173,8 @@ EVTNAME8455;Lackluster Revenue;;;;;;;;;;;;;x
 EVTDESC8455;The country is struggling to collect enough taxes to run things smoothly. To build up our reserves and make sure our public services work well, we need more money. The Economy Ministry suggests adding a new tax on imports. This can bring in more money and also help our national industries.;;;;;;;;;;;;;x
 EVTOPTA8455;So be it!;;;;;;;;;;;;;x
 EVTOPTB8455;Hhmm that's a bit too protectionist for my taste.;;;;;;;;;;;;;x
+EVTNAME8456;Outrage against the Alves Branco Tariff;;;;;;;;;;;;;x
+EVTDESC8456;After years of over taxing imports, the people are tired and angry. It's long overdue for us to lift the burden imposed by the Alves Branco Tariff and bring some relief to the public.;;;;;;;;;;;;;x
+EVTOPTA8456;Remove the tariff;;;;;;;;;;;;;x
+EVTOPTB8456;Set a time limit to the tariff, so the people and industry can adapt;;;;;;;;;;;;;x
+EVTOPTC8456;We need the revenue it brings;;;;;;;;;;;;;x
