--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -16,7 +16,7 @@ brz_politics_improve;§!This will §Gimprove§! the Political Landscape for Aboliti
 brz_politics_worsen;§!This will §Rworsen§! the Political Landscape for Abolition.§b;;;;;;;;;;;;x
 brz_economics_improve;§!This will §Gimprove§! the Economical Landscape for Abolition.§b;;;;;;;;;;;;x
 brz_economics_worsen;§!This will §Rworsen§! the Economical Landscape for Abolition.§b;;;;;;;;;;;;x
-brz_industry_alves;Problem is: Our industry is a bit over reliant on the protective tariff, this could issue chaos into the local industry who, all of a sudden, will be competing with english goods.;;;;;;;;;;;;;x
-brz_no_industry_alves;Our industry barely developed during the time, so I don't think that will be much of a problem.;;;;;;;;;;;;;x
+brz_industry_alves;§bProblem is: Our industry is a bit over reliant on the protective tariff, this could issue chaos into the local industry who, all of a sudden, will be competing with english goods.;;;;;;;;;;;;;x
+brz_no_industry_alves;§bOur industry barely developed during the time, so I don't think that will be much of a problem.;;;;;;;;;;;;;x
 slavery_end_economic_tooltip;Provinces will be hit with an RGO debuff, from -10% to -25%, based on their slave population.§b;;;;;;;;;;;;x
 become_sul;Become §BRio-Grandense Republic§b;;;;;;;;;;;;x
