Changes in brasilia

--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -18,6 +18,6 @@ brz_economics_improve;§!This will §Gimprove§! the Economical Landscape for Aboli
 brz_economics_worsen;§!This will §Rworsen§! the Economical Landscape for Abolition.§b;;;;;;;;;;;;x
 brz_industry_alves;§bProblem is: Our industry is a bit over reliant on the protective tariff, this could issue chaos into the local industry who, all of a sudden, will be competing with english goods.;;;;;;;;;;;;;x
 brz_no_industry_alves;§bOur industry barely developed during the time, so I don't think that will be much of a problem.;;;;;;;;;;;;;x
-brz_alves_end;§!The §GAlves Branco Tariff§! modifier is set to end in §G5 years§!.§b;;;;;;;;;;;;x
+brz_alves_end;§!The §YAlves Branco Tariff§! modifier is set to end in §Y5 years§!.§b;;;;;;;;;;;;x
 slavery_end_economic_tooltip;Provinces will be hit with an RGO debuff, from -10% to -25%, based on their slave population.§b;;;;;;;;;;;;x
 become_sul;Become §BRio-Grandense Republic§b;;;;;;;;;;;;x
