De usu publico + Latina humanitas addita

--- a/TGC/localisation/00_countries-demonyms.csv
+++ b/TGC/localisation/00_countries-demonyms.csv
@@ -861,6 +861,7 @@ RHO_ADJ;Rhodesian;rhodésien;Rhodesisch;;;;;;;;;;;x
 RIA_ADJ;Riau;;;;;;;;;;;;;x
 RJK_ADJ;Rajkot;;;;;;;;;;;;;x
 RLE_ADJ;Reussian;;;;;;;;;;;;;x
+RME_ADJ;Romana;;;;;;;;;;;;;x
 RMG_ADJ;Romagnan;;;;;;;;;;;;;x
 ROM_ADJ;Romanian;Roumain;Rumänisch;;;;;;;;;;;x
 RNC_ADJ;Mountaineer;;;;;;;;;;;;;x
