--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -1882,6 +1882,20 @@ RPL_dominion;North-Western Territory;;;;;;;;;;;;;x
 RPL_hms_governmenr;Northwestern Territories;;;;;;;;;;;;;x
 RPL_hms_government;Rupert’s Land;;;;;;;;;;;;;x
 RPL_parliamentary_republic;Northwestern Territories;;;;;;;;;;;;;x
+RME_absolute_monarchy;Regnum Romanum;;;;;;;;;;;;;x
+RME_absolute_monarchy_2;Imperium Romanum;;;;;;;;;;;;;x
+RME_bourgeois_dictatorship;Res Publica;;;;;;;;;;;;;x
+RME_colonial_company;Colonia Roma;;;;;;;;;;;;;x
+RME_democracy;Res Publica;;;;;;;;;;;;;x
+RME_dominion;Colonia Roma;;;;;;;;;;;;;x
+RME_fascist_dictatorship;Imperium Romanum;;;;;;;;;;;;;x
+RME_hms_government;Regnum Romanum;;;;;;;;;;;;;x
+RME_hms_government2;Imperium Romanum;;;;;;;;;;;;;x
+RME_presidential_dictatorship;Res Publica;;;;;;;;;;;;;x
+RME_proletarian_dictatorship;Res Publica Populi Romani;;;;;;;;;;;;;x
+RME_prussian_constitutionalism;Regnum Romanum;;;;;;;;;;;;;x
+RME_prussian_constitutionalism2;Imperium Romanum;;;;;;;;;;;;;x
+RME_theocracy;Imperium Catholicum;;;;;;;;;;;;;x
 RSR_absolute_monarchy;Principality of Reuss-Greiz;;;;;;;;;;;;;x
 RSR_colonial_company;Kreis Greiz;;;;;;;;;;;;;x
 RSR_democracy;People’s State of Greiz;;;;;;;;;;;;;x
