--- a/TGC/localisation/00_countries-parties.csv
+++ b/TGC/localisation/00_countries-parties.csv
@@ -4201,7 +4201,7 @@ RME_radical;Pars Rei Publicae;Republicani;Republicani;;;;;;;;;;;x
 RME_communist;Pars Aequalitatis;Radical Sozialisti;Radical Sozialisti;;;;;;;;;;;x
 RME_conservative;Pars Senatus;Moderati;Moderati;;;;;;;;;;;x
 RME_fascist;Imperatoris Cultus;Fasciste;Faschistisch;;;;;;;;;;;x
-RME_liberal;Liberalis Pars;Liberale;Liberale;;;;;;;;;;;x
+RME_liberal;Pars Liberalis;Liberale;Liberale;;;;;;;;;;;x
 RME_reactionary;Pars Imperatoris;;;;;;;;;;;;;x
 RME_socialist;Pars Populi;Sozialisti Christiano;Sozialisti Christiano;;;;;;;;;;;x
 ROR_radical;Repubblicani Romani - Fazione Radicale;Republicani;Republicani;;;;;;;;;;;x
