--- a/TGC/localisation/00_pop-culture.csv
+++ b/TGC/localisation/00_pop-culture.csv
@@ -201,6 +201,7 @@ lacustrine_bantu;Lacustrine Bantu;;;;;;;;;;;;;x
 lao;Lao;Lao;Lao;;;;;;;;;;;x
 ladakh;Ladakh;;;;;;;;;;;;;x
 laks;Lak;;;;;;;;;;;;;x
+latin;Latin;;;;;;;;;;;;;x
 latvian;Latvian;Letton;Lettisch;;;;;;;;;;;x
 lazis;Laz;;;;;;;;;;;;;x
 lendu;Lendu;;;;;;;;;;;;;x
