Res Publica + Latinis Occisis

--- a/TGC/localisation/00_events_0200000.csv
+++ b/TGC/localisation/00_events_0200000.csv
@@ -999,7 +999,7 @@ EVTDESC347000;Many languages are spoken across the Italian Peninsula: since the 
 EVTNAME347000;La Questione della Lingua;;;;;;;;;;;;;x
 EVTOPTA347000;Una nazione, un popolo, una lingua!;;;;;;;;;;;;;x
 EVTOPTB347000;Minime! Sermo Latinus solum recipitur.;;;;;;;;;;;;;x
-EVTDESC347001;Linguarum appellandi modus in saecolis mutat et sermo Latinus non excipit. Ecclesiae institutum suam litterarum appellationem excoluit, similissimam Italico modo, quae dissimilis eo veterum Romanorum est. Hoc uti volebamus donec quidam litterarii antiquam loqui rationem restituerunt et nobis fungi proposuerunt. Nunc quaestio: pergere loqui Latine modo Ecclesiae aut sequi hanc "novam" litterarum appellationem debemus? Manifesto quidquid faciam adversarios "removere" cogamur.;;;;;;;;;;;;;x
+EVTDESC347001;Linguarum appellandi modus in saeculis mutat et sermo Latinus non excipit. Ecclesiae institutum suam litterarum appellationem excoluit, similissimam Italico modo, quae dissimilis eo veterum Romanorum est. Hoc uti volebamus donec quidam litterarii antiquam loqui rationem restituerunt et nobis fungi proposuerunt. Nunc quaestio: pergere loqui Latine modo Ecclesiae aut sequi hanc "novam" litterarum appellationem debemus? Manifesto quidquid faciamus adversarios "removere" cogamur.;;;;;;;;;;;;;x
 EVTNAME347001;De Appellandi Modo;;;;;;;;;;;;;x
 EVTOPTA347001;Appellandi modo ecclesiastico loquamur.;;;;;;;;;;;;;x
 EVTOPTB347001;What? I can't understand anything!;;;;;;;;;;;;;x
@@ -1016,11 +1016,14 @@ EVTNAME347004;De Usu Publico;;;;;;;;;;;;;x
 EVTOPTA347004;Nihil;;;;;;;;;;;;;x
 EVTOPTB347004;Haec pars dubia, deprehendete!;;;;;;;;;;;;;x
 EVTOPTC347004;Haec pars recta, reliquua non mei interest;;;;;;;;;;;;;x
-EVTDESC347005;In Italico senato parti nostrae nonnulli favent: quare notiones nostrum de Latina lingua suoque usu sermone commune effici potessent, si praevaleremus. Nobis senatoribus persuadendum et Roma Italiaque magnae rursus erunt… \n Res controversissima est, oratores nostri concitati orationem tenent et factio nostra victrix esse videtur. Sed subito patres qui in nomine incrementi Latinae linguae se opponere perseverant clamores tollere: quomodo sermonem totius civitatis mutare posse, quis in se hoc recipere, quantum imperium eum habere? Unus quaerere audet si Italia vocari possimus res publica quae Latine loquit.;;;;;;;;;;;;;x
+EVTDESC347005;In Italico senato parti nostrae nonnulli favent: quare notiones nostri de Latina lingua suoque usu sermone commune effici potessent, si praevaleremus. Nobis senatoribus persuadendum et Roma Italiaque magnae rursus erunt… \n Res controversissima est, oratores nostri concitati orationem tenent et factio nostra victrix esse videtur. Sed subito patres qui in nomine incrementi Latinae linguae se opponere perseverant clamores tollere: quomodo sermonem totius civitatis mutare posse, quis in se hoc recipere, quantum imperium eum habere? Unus quaerere audet si Italia vocari possimus res publica quae Latine loquit.;;;;;;;;;;;;;x
 EVTNAME347005;De Usu Publico;;;;;;;;;;;;;x
 EVTOPTA347005;Nova res publica opus est;;;;;;;;;;;;;x
 EVTOPTB347005;Latin? In $YEAR$? Are we some kind of larpers?;;;;;;;;;;;;;x
 EVTOPTC347005;Praeses unus statuat, imperium est ei;;;;;;;;;;;;;x
+EVTDESC347006;Res Publica Romana rursus ortur. Omnes nisus nostri pretium solverunt et toti senatui administrationique iam non Italiae, sed Novae Romae Latinum sermonem rectam linguam imperii esse persuasum est. Accipit Romae triumphum gloriosus quod civibus gloriam nostram quae perpetuam in saeculis erit ostendat. Salvete, veteri mores, a filiis nepotibusque commemorabimini et Romana potestas fulgebit in perpetuum.;;;;;;;;;;;;;x
+EVTNAME347006;Roma Constituta Est;;;;;;;;;;;;;x
+EVTOPTA347006;Magnum gaudium summamque laetitiam!;;;;;;;;;;;;;x
 EVTOPTA369706;Give them more than they estimated.;;;;;;;;;;;;;x
 EVTOPTB369706;Give them the amount estimated.;;;;;;;;;;;;;x
 EVTOPTC369706;Give them less than they estimated.;;;;;;;;;;;;;x
