--- a/TGC/localisation/00_pop-culture-group.csv
+++ b/TGC/localisation/00_pop-culture-group.csv
@@ -23,6 +23,7 @@ italian;Italian;Italien;Italienisch;;;;;;;;;;;x
 jewish_cultures;Jewish Cultures;;;;;;;;;;;;;x
 khoe_san;Khoe-San;;;;;;;;;;;;;x
 latin_american_cultures;Latin American Cultures;Cultures latino-américaines;Lateinamerikanische Kulturen;;;;;;;;;;;x
+latin_culture_group;Latin;;;;;;;;;;;;;x
 levantine;Levantine;Levantin;Levantinisch;;;;;;;;;;;x
 native_american;Native American;Amérindien;Amerikanische Ureinwohner;;;;;;;;;;;x
 neo_european_cultures;Neo European Cultures;Cultures néo-européennes;Neoeuropäische Kulturen;;;;;;;;;;;x
