--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1178,3 +1178,13 @@ EVTDESC8456;After years of over taxing imports, the people are tired and angry. 
 EVTOPTA8456;Remove the tariff;;;;;;;;;;;;;x
 EVTOPTB8456;Set a time limit to the tariff, so the people and industry can adapt;;;;;;;;;;;;;x
 EVTOPTC8456;We need the revenue it brings;;;;;;;;;;;;;x
+EVTNAME8231;Brazil offers to buy the Guyanas;;;;;;;;;;;;;x
+EVTDESC8231;Brazil, the local South American power, offered us a siezable amount of money for our holdings in the Guyanas. This may be a good offer given how expensive is to maintain that region, but it also be represent the loss of a major strategic spot in South America. this could be compensated with the fact we would be reinforcing our alliance with the brazilians, but we don't know their intentions for future.;;;;;;;;;;;;;x
+EVTOPTA8231;They money will come in handy, and besides, it's just jungle;;;;;;;;;;;;;x
+EVTOPTB8231;The Guyanas are a strategic spot to project our power;;;;;;;;;;;;;x
+EVTNAME8232;$FROMCOUNTRY$ agrees!;;;;;;;;;;;;;x
+EVTDESC8232;$FROMCOUNTRY$ accepted our propusal to buy their holding on the Guyanas. This will come extremely handy for us.;;;;;;;;;;;;;x
+EVTOPTA8232;Amazing.;;;;;;;;;;;;;x
+EVTNAME8233;$FROMCOUNTRY$ refuses!;;;;;;;;;;;;;x
+EVTDESC8233;$FROMCOUNTRY$ refused our propusal to buy their holding on the Guyanas! It seems they value this piece of jungle more than we expected.;;;;;;;;;;;;;x
+EVTOPTA8233;Damn them!;;;;;;;;;;;;;x
