--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1183,8 +1183,8 @@ EVTDESC8231;Brazil, the local South American power, offered us a siezable amount
 EVTOPTA8231;They money will come in handy, and besides, it's just jungle;;;;;;;;;;;;;x
 EVTOPTB8231;The Guyanas are a strategic spot to project our power;;;;;;;;;;;;;x
 EVTNAME8232;$FROMCOUNTRY$ agrees!;;;;;;;;;;;;;x
-EVTDESC8232;$FROMCOUNTRY$ accepted our propusal to buy their holding on the Guyanas. This will come extremely handy for us.;;;;;;;;;;;;;x
+EVTDESC8232;$FROMCOUNTRY$ accepted our proposal to buy their holding on the Guyanas. This will come extremely handy for us.;;;;;;;;;;;;;x
 EVTOPTA8232;Amazing.;;;;;;;;;;;;;x
 EVTNAME8233;$FROMCOUNTRY$ refuses!;;;;;;;;;;;;;x
-EVTDESC8233;$FROMCOUNTRY$ refused our propusal to buy their holding on the Guyanas! It seems they value this piece of jungle more than we expected.;;;;;;;;;;;;;x
+EVTDESC8233;$FROMCOUNTRY$ refused our proposal to buy their holding on the Guyanas! It seems they value this piece of jungle more than we expected.;;;;;;;;;;;;;x
 EVTOPTA8233;Damn them!;;;;;;;;;;;;;x
