--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -1373,8 +1373,8 @@ KPB_absolute_monarchy2;United Kingdom of Brazil, Portugal and Algarves;Kingdom o
 KPB_bourgeois_dictatorship;Republic of Lusitania;Republic of Lusitania;Republic of Lusitania;;;;;;;;;;;x
 KPB_democracy;Republic of Lusitania;Republic of Lusitania;Republic of Lusitania;;;;;;;;;;;x
 KPB_fascist_dictatorship;Great Lusitanian Union;Great Luso Union;Great Luso Union;;;;;;;;;;;x
-KPB_hms_government;Kingdom of Portugal-Brazil;Kingdom of Portugal-Brazil;Kingdom of Portugal-Brazil;;;;;;;;;;;x
-KPB_hms_government2;Kingdom of Brazil, Portugal and Algarves;Kingdom of Portugal-Brazil;Kingdom of Portugal-Brazil;;;;;;;;;;;x
+KPB_hms_government;United Kingdom of Portugal, Brazil and Algarves;Kingdom of Portugal-Brazil;Kingdom of Portugal-Brazil;;;;;;;;;;;x
+KPB_hms_government2;United Kingdom of Brazil, Portugal and Algarves;Kingdom of Portugal-Brazil;Kingdom of Portugal-Brazil;;;;;;;;;;;x
 KPB_presidential_dictatorship;Republic of Lusitania;Republic of Lusitania;Republic of Lusitania;;;;;;;;;;;x
 KPB_proletarian_dictatorship;Socialist Union of Portugal-Brazil;Socialist Union of Portugal-Brazil;Socialist Union of Portugal-Brazil;;;;;;;;;;;x
 KPB_prussian_constitutionalism;United Kingdom of Portugal, Brazil and Algarves;Kingdom of Portugal-Brazil;Kingdom of Portugal-Brazil;;;;;;;;;;;x
