--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -1373,11 +1373,11 @@ KPB_democracy;Republic of Lusitania;;;;;;;;;;;;;x
 KPB_fascist_dictatorship;Great Lusitanian Union;;;;;;;;;;;;;x
 KPB_presidential_dictatorship;Republic of Lusitania;;;;;;;;;;;;;x
 KPB_proletarian_dictatorship;Socialist Union of Portugal-Brazil;;;;;;;;;;;;;x
-KPB_prussian_constitutionalism;B United Kingdom of Portugal, Brazil and Algarves;;;;;;;;;;;;;x
+KPB_prussian_constitutionalism;United Kingdom of Portugal, Brazil and Algarves;;;;;;;;;;;;;x
 KPB_prussian_constitutionalism2;United Kingdom of Brazil, Portugal and Algarves;;;;;;;;;;;;;x
 KPB_absolute_monarchy;United Kingdom of Portugal, Brazil and Algarves;;;;;;;;;;;;;x
 KPB_absolute_monarchy2;United Kingdom of Brazil, Portugal and Algarves;;;;;;;;;;;;;x
-KPB_hms_government;A United Kingdom of Portugal, Brazil and Algarves;;;;;;;;;;;;;x
+KPB_hms_government;United Kingdom of Portugal, Brazil and Algarves;;;;;;;;;;;;;x
 KPB_hms_government2;United Kingdom of Brazil, Portugal and Algarves;;;;;;;;;;;;;x
 KRN_bourgeois_dictatorship;Tamil Nadu;;;;;;;;;;;;;x
 KRN_democracy;Tamil Nadu;;;;;;;;;;;;;x
