--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -21,3 +21,5 @@ brz_no_industry_alves;§bOur industry barely developed during the time, so I don'
 brz_alves_end;§!The §YAlves Branco Tariff§! modifier is set to end in §Y5 years§!.§b;;;;;;;;;;;;x
 slavery_end_economic_tooltip;Provinces will be hit with an RGO debuff, from -10% to -25%, based on their slave population.§b;;;;;;;;;;;;x
 become_sul;Become §BRio-Grandense Republic§b;;;;;;;;;;;;x
+brz_guyanas_buy;You will pay §Y50000§! pounds per province, up to §Y450000§! pounds for all of them.§b;;;;;;;;;;;;x
+kpb_formation;Forming the United Kingdom will lock you out from Brazilian and Portuguese exclusive content.§b;;;;;;;;;;;;x
