--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1590,11 +1590,11 @@ espirito_santo_deal_desc;The deal to buy Espírito Santo is open! Hurry up and bu
 reorganizing_labor_harsh;Reorganizing Labor;;;;;;;;;;;;;x
 reorganizing_labor_harsh_desc;After slavery was abolished, the local slave dependent economy was deeply affected and is still recovering.;;;;;;;;;;;;;x
 reorganizing_labor_mild;Reorganizing Labor;;;;;;;;;;;;;x
-reorganizing_labor_mild_desc;After slavery was abolished, the local slave dependent economy was deeply affected and is still recovering.;;;;;;;;;;;;;x
+reorganizing_labor_mild_desc;After slavery was abolished, the local slave dependent economy was affected and is still recovering.;;;;;;;;;;;;;x
 reorganizing_labor_light;Reorganizing Labor;;;;;;;;;;;;;x
-reorganizing_labor_light_desc;After slavery was abolished, the local slave dependent economy was deeply affected and is still recovering.;;;;;;;;;;;;;x
+reorganizing_labor_light_desc;After slavery was abolished, the local slave dependent economy was somewhat affected and is still recovering.;;;;;;;;;;;;;x
 reorganizing_labor_minimal;Reorganizing Labor;;;;;;;;;;;;;x
-reorganizing_labor_minimal_desc;After slavery was abolished, the local slave dependent economy was deeply affected and is still recovering.;;;;;;;;;;;;;x
+reorganizing_labor_minimal_desc;After slavery was abolished, the local slave dependent economy wasn't that affected, but it is still recovering.;;;;;;;;;;;;;x
 lei_do_registro;Register Law;;;;;;;;;;;;;x
 lei_do_registro_desc;Slaves are being registered and freed, but we are repaying the former owners from our pocket.;;;;;;;;;;;;;x
 tarifa_alves_branco;Alves Branco Tariff;;;;;;;;;;;;;x
