Added tooltip to French Schooling and Jules Ferry laws saying they are mutually excluisve

--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -2,3 +2,4 @@ CODE;ENGLISH;FRENCH;GERMAN;POLISH;SPANISH;ITALIAN;SWEDISH;CZECH;HUNGARIAN;DUTCH;
 election_tool_tip;Election Events will run normally.§b;;;;;;;;;;;;x
 election_tool_tip_muted;Election Events will be §Gmuted§!, but their results will be §Yrandom§!.§b;;;;;;;;;;;;x
 override_tool_tip;Activate:§G National Campaign.§! \n\n§RWARNING:§! National Campaigns will take a significant amount of money daily! Be careful otherwise you WILL bankrupt!§b;;;;;;;;;;;;x
+french_schooling;The §GJules Ferry Laws§! and the §GFrench Language Schooling§! decisions are mutually exclusive.§b;;;;;;;;;;;;x
