--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -2,9 +2,19 @@ CODE;ENGLISH;FRENCH;GERMAN;POLISH;SPANISH;ITALIAN;SWEDISH;CZECH;HUNGARIAN;DUTCH;
 election_tool_tip;Election Events will run normally.§b;;;;;;;;;;;;x
 election_tool_tip_muted;Election Events will be §Gmuted§!, but their results will be §Yrandom§!.§b;;;;;;;;;;;;x
 override_tool_tip;Activate:§G National Campaign.§! \n\n§RWARNING:§! National Campaigns will take a significant amount of money daily! Be careful otherwise you WILL bankrupt!§b;;;;;;;;;;;;x
-majority_coup_check_tooltip;§RWarning:§! The outcome will change based on Pedro's age. \nYou will be able to back down before confirming the coup.§b;;;;;;;;;;;;x
-rio_grande_peace_deal_tooltip;§RWarning:§! The negotiations options will changed based on the war. They are §Gwilling§! to negotiate, but multiple failed negotiating attempts can make the situation worse.§b;;;;;;;;;;;;x
-farroupilha_negotiation3;Too many negotiations;;;;;;;;;;;;x
+dom_pedro_age_10;Pedro is currently 10, it would be a terrible idea to crown him.§b;;;;;;;;;;;;x
+dom_pedro_age_11;Pedro is currently 11, it is too early to crown him.§b.§b;;;;;;;;;;;;x
+dom_pedro_age_12;Pedro is currently 12, it may be too early to crown him.§b.§b;;;;;;;;;;;;x
+dom_pedro_age_13;Pedro is currently 13, still early to crown him, but it may be resonable.§b.§b;;;;;;;;;;;;x
+dom_pedro_age_14;Pedro is currently 14, changing his age of majority and crowning would be an wise move, he's old enough.§b;;;;;;;;;;;;x
+dom_pedro_age_15;Pedro is currently 15, changing his age of majority and crowning would be an wise move, he's old enough.§b.§b;;;;;;;;;;;;x
+dom_pedro_age_16;Pedro is currently 16, changing his age of majority and crowning would be an wise move, he's more than old enough.§b.§b;;;;;;;;;;;;x
+dom_pedro_age_17;Pedro is currently 17, changing his age of majority and crowning would be an wise move, he's more than old enough.§b.§b;;;;;;;;;;;;x
+dom_pedro_age_18;Pedro is currently 18. There's no need for a majority coup anymore, he will be crowned soon soon.§b;;;;;;;;;;;;x
+rio_grande_peace_deal_tooltip_0;§RWarning:§! The negotiations options will changed based on the war. They are §Gwilling§! to negotiate, but multiple failed negotiating attempts can make the situation worse.§b;;;;;;;;;;;;x
+rio_grande_peace_deal_tooltip_1;§RWarning:§! The negotiations options will changed based on the war. They are §Yreluctant§! to negotiate, we have negotiated once and failed, we should be careful the next time.§b;;;;;;;;;;;;x
+rio_grande_peace_deal_tooltip_2;§RWarning:§! The negotiations options will changed based on the war. They are §Rskeptical§! about negotiation, we have negotiated twice and failed, if we fail again I doubt they will want to try again.§b;;;;;;;;;;;;x
+rio_grande_peace_deal_tooltip_3;§RWarning:§! The negotiations options will changed based on the war, but they are now §RRefusing§! to negotiate.§b;;;;;;;;;;;;x
 election_tool_tip;Election Events will run normally.§b;;;;;;;;;;;;x
 election_tool_tip_muted;Election Events will be §Gmuted§!, but their results will be §Yrandom§!.§b;;;;;;;;;;;;x
 override_tool_tip;Activate:§G National Campaign.§! \n\n§RWARNING:§! National Campaigns will take a significant amount of money daily! Be careful otherwise you WILL bankrupt!§b;;;;;;;;;;;;x
