--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -15,6 +15,28 @@ rio_grande_peace_deal_tooltip_0;§RWarning:§! The negotiations options will chang
 rio_grande_peace_deal_tooltip_1;§RWarning:§! The negotiations options will changed based on the war. They are §Yreluctant§! to negotiate, we have negotiated once and failed, we should be careful the next time.§b;;;;;;;;;;;;x
 rio_grande_peace_deal_tooltip_2;§RWarning:§! The negotiations options will changed based on the war. They are §Rskeptical§! about negotiation, we have negotiated twice and failed, if we fail again I doubt they will want to try again.§b;;;;;;;;;;;;x
 rio_grande_peace_deal_tooltip_3;§RWarning:§! The negotiations options will changed based on the war, but they are now §RRefusing§! to negotiate.§b;;;;;;;;;;;;x
+brz_politics_check_tooltip_0;The country is not politically prepared to abolish slavery at all, Political Consequences will be §Rbeyond dreadful§!.§b;;;;;;;;;;;;x
+brz_politics_check_tooltip_1;The country is not politically prepared to abolish slavery at all, Political Consequences will be §Rextremely dreadful§!.§b§b;;;;;;;;;;;;x
+brz_politics_check_tooltip_2;The country is not politically prepared to abolish slavery on the slighest, Political Consequences will be §Rdreadful§!.§b;;;;;;;;;;;;x
+brz_politics_check_tooltip_3;The country is not politically prepared to abolish slavery at all, Political Consequences will be §Rextremely dire§!.§b;;;;;;;;;;;;x
+brz_politics_check_tooltip_4;The country is not politically prepared to abolish slavery at all, Political Consequences will be §Rdire§!.§b;;;;;;;;;;;;x
+brz_politics_check_tooltip_5;The country is not politically prepared to abolish slavery, Political Consequences will be §Rdire§!.§b;;;;;;;;;;;;x
+brz_politics_check_tooltip_6;The country is politically poorly prepared to abolish slavery, Political Consequences will be §Ybad§!.§b;;;;;;;;;;;;x
+brz_politics_check_tooltip_7;The country is somewhat politically prepared to abolish slavery, Political Consequences will be §Ybad but tolerable§!.§b;;;;;;;;;;;;x
+brz_politics_check_tooltip_8;The country is politically prepared to abolish slavery, Political Consequences will be §Gsomewhat tolerable§!.§b;;;;;;;;;;;;x
+brz_politics_check_tooltip_9;The country is politically well prepared to abolish slavery, Political Consequences will be §Gtolerable§!.§b;;;;;;;;;;;;x
+brz_politics_check_tooltip_10;The country is fully politically prepared to abolish slavery, Political Consequences will be §Gtolerable§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_0;§! The country is fully dependant on slave work, Economical Consequences will be §Rbeyond dreadful§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_1;§! The country is fully dependant on slave work, Economical Consequences will be §Rextremely dreadful§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_2;§! The country is heavily dependant on slave work, Economical Consequences be §Rdreadful§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_3;§! The country is dependant on slave work, Economical Consequences be §Rextremely dire§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_4;§! The country is still dependant on slave work, Economical Consequences will be §Rdire§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_5;§! The country still reallies on slave work, Economical Consequences §Rsomewhat dire§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_6;§! The country still somewhat reallies on slave work, Economical Consequences will be §Ybad§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_7;§! Some sectos are still dependent on slave work, Economical Consequences be §Ysomewhat tolerable§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_8;§! Most, but not all, sectors are free from slave work, Economical Consequences will be §Gtolerable§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_9;§! The economy does not relly on slave work, Economical Consequences will be §Gresonable§!.§b;;;;;;;;;;;;x
+brz_economics_check_tooltip_10;§! The economy pretty much free from slave work, Economical Consequences will be §Bfew§!.§bb;;;;;;;;;;;;x
 election_tool_tip;Election Events will run normally.§b;;;;;;;;;;;;x
 election_tool_tip_muted;Election Events will be §Gmuted§!, but their results will be §Yrandom§!.§b;;;;;;;;;;;;x
 override_tool_tip;Activate:§G National Campaign.§! \n\n§RWARNING:§! National Campaigns will take a significant amount of money daily! Be careful otherwise you WILL bankrupt!§b;;;;;;;;;;;;x
