Fixing african starting oob and countries

--- a/TGC/localisation/00_countries-demonyms.csv
+++ b/TGC/localisation/00_countries-demonyms.csv
@@ -168,6 +168,7 @@ BHP_ADJ;Punjabi;;;;;;;;;;;;;x
 BHR_ADJ;Bahraini;;;;;;;;;;;;;x
 BHT_ADJ;Bohtani;;;;;;;;;;;;;x
 BHU_ADJ;Bhutanese;Bhoutanais;Bhutanesisch;;;;;;;;;;;x
+BHY_ADJ;Buhayan;;;;;;;;;;;;;x
 BIA_ADJ;Biafran;;;;;;;;;;;;;x
 BIH_ADJ;Bihari;;;;;;;;;;;;;x
 BIK_ADJ;Bikaneri;Bikaneri;Bikaneri;;;;;;;;;;;x
