--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -88,6 +88,7 @@ BHP;Bahawalpur;;;;;;;;;;;;;x
 BHR;Bahrain;;;;;;;;;;;;;x
 BHT;Bohtan;;;;;;;;;;;;;x
 BHU;Bhutan;Bhoutan;Bhutan;;;;;;;;;;;x
+BHY;Buhaya;;;;;;;;;;;;;x
 BIA;Biafra;;;;;;;;;;;;;x
 BIH;Bihar;;;;;;;;;;;;;x
 BIK;Bikaner;Bikaner;Bikaner;;;;;;;;;;;x
