--- a/TGC/localisation/00_countries-demonyms.csv
+++ b/TGC/localisation/00_countries-demonyms.csv
@@ -434,6 +434,7 @@ FSA_ADJ;American;;;;;;;;;;;;;x
 FUJ_ADJ;Fujairahi;;;;;;;;;;;x
 GAB_ADJ;Gabonese;;;;;;;;;;;;;x
 GAZ_ADJ;Nguni;;;;;;;;;;;;;x
+GBU_ADJ;Kaabuan;;;;;;;;;;;;;x
 GBU_absolute_monarchy_ADJ;Kaabuan;;;;;;;;;;;;;x
 GBU_democracy_ADJ;Bissau-Guinean;;;;;;;;;;;;;x
 GCF_ADJ;German;Deutsch;Deutsch;;;;;;;;;;;x
