--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1601,3 +1601,7 @@ tarifa_alves_branco;Alves Branco Tariff;;;;;;;;;;;;;x
 tarifa_alves_branco_desc;A protective tariff to shield the national industry from outside competition. And also booster tax revenue, mostly this.;;;;;;;;;;;;;x
 economic_downturn;Economic Downturn;;;;;;;;;;;;;x
 economic_downturn_desc;Factories are having an hard time coping with the removal of the protective tariffs.;;;;;;;;;;;;;x
+poor_sanitation;Poor Sanitation;;;;;;;;;;;;;x
+poor_sanitation_desc;The city is badly planned and plagued with disease.;;;;;;;;;;;;;x
+renovating_city;Renovating City;;;;;;;;;;;;;x
+renovating_city_desc;The city is under renovation, hopefully it doesn't take long.;;;;;;;;;;;;;x
