revolta da vacina, 2

--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1605,3 +1605,5 @@ poor_sanitation;Poor Sanitation;;;;;;;;;;;;;x
 poor_sanitation_desc;The city is badly planned and plagued with disease.;;;;;;;;;;;;;x
 renovating_city;Renovating City;;;;;;;;;;;;;x
 renovating_city_desc;The city is under renovation, hopefully it doesn't take long.;;;;;;;;;;;;;x
+forced_vaccination;Compulsory Vaccination;;;;;;;;;;;;;x
+forced_vaccination_desc;;;;;;;;;;;;;;x
