--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1194,8 +1194,8 @@ EVTOPTA8470;It's time to reorganize the city! Bulldoze everything down!;;;;;;;;;
 EVTOPTB8470;It's time to reorganize the city, but let's take a calm and collected approach.;;;;;;;;;;;;;x
 EVTOPTC8470;I wouldn't touch such a historical precious city;;;;;;;;;;;;;x
 EVTNAME8471;Vaccination Campaign;;;;;;;;;;;;;x
-EVTDESC8471;$CAPITAL$ is still under renovations, but fixing the overcrowding is just a small step towards cleaning the city. The current head of the General Directorate of Public Health, Oswaldo Cruz, suggests a massive Vaccination Campaign. He’s a capable and smart man, but his methods are unorthodox at best. He insists on a mandatory vaccination campaign against diseases like Yellow Fever, the Bubonic Plague and, especially, Small Pox. \n\n;;;;;;;;;;;;;x
+EVTDESC8471;$CAPITAL$ is still under renovations, but fixing the overcrowding is just a small step towards cleaning the city. The current head of the General Directorate of Public Health, Oswaldo Cruz, suggests a massive Vaccination Campaign. He’s a capable and smart man, but his methods are unorthodox at best. He insists on a mandatory vaccination campaign against diseases like Yellow Fever, the Bubonic Plague and, especially, Small Pox. \n;;;;;;;;;;;;;x
 EVTEXTRAA8471;The people in $CAPITAL$ are already weary of his methods and the fact that we recently had massive renovations which may not have considered the poorest stratas, to put it lightly;;;;;;;;;;;;;x
-EVTEXTRAB8471;After our work reorganzing the capital, in which we took good care of the poorer classes, people seem to trust the government enough to take the vaccines.;;;;;;;;;;;;;x
+EVTEXTRAB8471;§bAfter our work reorganzing the capital, in which we took good care of the poorer classes, people seem to trust the government enough to take the vaccines.;;;;;;;;;;;;;x
 EVTOPTA8471;Do it! Make everyone take it!;;;;;;;;;;;;;x
 EVTOPTB8471;Do it! But don't make it compulsory, people should decide if they want to take it or not.;;;;;;;;;;;;;x
