Revolta da vacina, final

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1199,3 +1199,7 @@ EVTEXTRAA8471;The people in $CAPITAL$ are already weary of his methods and the f
 EVTEXTRAB8471;§bAfter our work reorganzing the capital, in which we took good care of the poorer classes, people seem to trust the government enough to take the vaccines.;;;;;;;;;;;;;x
 EVTOPTA8471;Do it! Make everyone take it!;;;;;;;;;;;;;x
 EVTOPTB8471;Do it! But don't make it compulsory, people should decide if they want to take it or not.;;;;;;;;;;;;;x
+EVTNAME8472;The Vaccine Revolt!;;;;;;;;;;;;;x
+EVTDESC8472;Discontent with the government, and now angered by the compulsory vaccination, the people went to the streets! $CAPITAL$ is in chaos! \n\n Vandalism is rampant, there's event rumors about a coup, the situation is getting out of control.;;;;;;;;;;;;;x
+EVTOPTA8472;Send in the police force and crush evereyone.;;;;;;;;;;;;;x
+EVTOPTB8472;Fine, secede to their demands and halt the compulsory vaccination.;;;;;;;;;;;;;x
