--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1603,6 +1603,8 @@ economic_downturn;Economic Downturn;;;;;;;;;;;;;x
 economic_downturn_desc;Factories are having an hard time coping with the removal of the protective tariffs.;;;;;;;;;;;;;x
 poor_sanitation;Poor Sanitation;;;;;;;;;;;;;x
 poor_sanitation_desc;The city is badly planned and plagued with disease.;;;;;;;;;;;;;x
+good_sanitation;Good Sanitation;;;;;;;;;;;;;x
+good_sanitation_desc;The city is clean, organized and disease free.;;;;;;;;;;;;;x
 renovating_city;Renovating City;;;;;;;;;;;;;x
 renovating_city_desc;The city is under renovation, hopefully it doesn't take long.;;;;;;;;;;;;;x
 forced_vaccination;Compulsory Vaccination;;;;;;;;;;;;;x
