--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1609,3 +1609,5 @@ renovating_city;Renovating City;;;;;;;;;;;;;x
 renovating_city_desc;The city is under renovation, hopefully it doesn't take long.;;;;;;;;;;;;;x
 forced_vaccination;Compulsory Vaccination;;;;;;;;;;;;;x
 forced_vaccination_desc;;;;;;;;;;;;;;x
+antonio_conselheiro;Antônio Conselheiro;;;;;;;;;;;;;;x
+antonio_conselheiro_desc;Antônio Conselheiro now holds an important hole as counselor to the theocracy, which is fitting giving his surname.;;;;;;;;;;;;;x
