--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1169,6 +1169,10 @@ EVTOPTA8439;It's over anyway;;;;;;;;;;;;;x
 EVTNAME8440;Antônio Conselheiro is right.;;;;;;;;;;;;;x
 EVTDESC8440;Antônio Conselheiro is right. \n\n Not only they fought off the federal army, but proved themselves to be blessed by the heavens above. This can only mean one thing: Antônio Conselheiro is right, the republic is the work of the antichrist! We should go back to our ways, and govern the country the way God intended: State and the Church as the same body.;;;;;;;;;;;;;x
 EVTOPTA8440;And so we go, the way God intended.;;;;;;;;;;;;;x
+EVTNAME8441;Antônio Conselheiro dies;;;;;;;;;;;;;x
+EVTDESC8441;Our beloved counselor, Antônio Conselheiro, has passed away calmly in the last night. The guiding voice for our theocracy is now gone.;;;;;;;;;;;;;x
+EVTOPTA8441;We will carry on his legacy.;;;;;;;;;;;;;x
+EVTOPTB8441;Please let's just end this madness.;;;;;;;;;;;;;x
 EVTNAME8455;Lackluster Revenue;;;;;;;;;;;;;x
 EVTDESC8455;The country is struggling to collect enough taxes to run things smoothly. To build up our reserves and make sure our public services work well, we need more money. The Economy Ministry suggests adding a new tax on imports. This can bring in more money and also help our national industries.;;;;;;;;;;;;;x
 EVTOPTA8455;So be it!;;;;;;;;;;;;;x
